# beautiful

./: .flake8  .gitignore  README.MD  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  questions.rst  reference.rst
docs/questions/: Python NamedTemporaryFiel 权限错误.md
src/beautiful/: client.py
src/tests/: test_client.py
